{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 45,
  "lineage": "97f9f4b1-d8b6-ca5c-b5a2-cfe2ca8b0bda",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "central_to_south",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/virtualNetworkPeerings/peer-central-to-south",
            "name": "peer-central-to-south",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet1",
            "resource_group_name": "04-t1-www-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet",
            "module.network_south.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "south_to_central",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet1/virtualNetworkPeerings/peer-south-to-central",
            "name": "peer-south-to-central",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0",
            "resource_group_name": "04-t1-www-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet",
            "module.network_south.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkInterfaces/webvm-nic",
            "internal_domain_name_suffix": "0qqcs3ycbbsepp1jisx4zhkivc.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "name": "webvm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "04-t1-www-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "webvm-nic",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_subnet.subnets",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vmss_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/publicIPAddresses/vnet0-lb-pip"
              }
            ],
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb",
            "location": "koreacentral",
            "name": "vnet0-lb",
            "resource_group_name": "04-t1-www-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/backendAddressPools/vnet0-backend-pool",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb",
            "name": "vnet0-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_lb.vmss_lb",
            "module.network_central.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health.html"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_lb.vmss_lb",
            "module.network_central.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/backendAddressPools/vnet0-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb",
            "name": "http",
            "probe_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet0-lb/probes/http-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_lb.vmss_lb",
            "module.network_central.azurerm_lb_backend_address_pool.bpepool",
            "module.network_central.azurerm_lb_probe.vmss_probe",
            "module.network_central.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.141.47.89",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "bastion-pip",
            "resource_group_name": "04-t1-www-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/publicIPAddresses/vnet0-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.230.26.132",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "vnet0-lb-pip",
            "resource_group_name": "04-t1-www-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-t1-www-rg",
            "virtual_network_name": "vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet-db",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-db",
            "name": "subnet-db",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-t1-www-rg",
            "virtual_network_name": "vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-db",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet-vmss",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-vmss",
            "name": "subnet-vmss",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-t1-www-rg",
            "virtual_network_name": "vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-vmss",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet-web",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-web",
            "name": "subnet-web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-t1-www-rg",
            "virtual_network_name": "vnet0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-web",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_central",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "772920d4-0802-4764-bf69-44afec9d48aa",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0",
            "location": "koreacentral",
            "name": "vnet0",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-t1-www-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet0",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vmss_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/publicIPAddresses/vnet1-lb-pip"
              }
            ],
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb",
            "location": "koreasouth",
            "name": "vnet1-lb",
            "resource_group_name": "04-t1-www-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_south.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/backendAddressPools/vnet1-backend-pool",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb",
            "name": "vnet1-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_south.azurerm_lb.vmss_lb",
            "module.network_south.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health.html"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_south.azurerm_lb.vmss_lb",
            "module.network_south.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/backendAddressPools/vnet1-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb",
            "name": "http",
            "probe_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/loadBalancers/vnet1-lb/probes/http-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_south.azurerm_lb.vmss_lb",
            "module.network_south.azurerm_lb_backend_address_pool.bpepool",
            "module.network_south.azurerm_lb_probe.vmss_probe",
            "module.network_south.azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/publicIPAddresses/vnet1-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.200.130.49",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "vnet1-lb-pip",
            "resource_group_name": "04-t1-www-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet-replica",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet-replica",
            "name": "subnet-replica",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "04-t1-www-rg",
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-replica",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_south.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_south",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "83944395-8e55-4da0-acca-04ef31867685",
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "koreasouth",
            "name": "vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "04-t1-www-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet1",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkSecurityGroups/vnet0-nsg-db",
            "location": "koreacentral",
            "name": "vnet0-nsg-db",
            "resource_group_name": "04-t1-www-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3306"
                ],
                "direction": "Inbound",
                "name": "ssh-db",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet0-nsg-db",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkSecurityGroups/vnet0-nsg-http",
            "location": "koreacentral",
            "name": "vnet0-nsg-http",
            "resource_group_name": "04-t1-www-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "80"
                ],
                "direction": "Inbound",
                "name": "ssh-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet0-nsg-http",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkSecurityGroups/vnet0-nsg-ssh",
            "location": "koreacentral",
            "name": "vnet0-nsg-ssh",
            "resource_group_name": "04-t1-www-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/8",
                  "61.108.60.26"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet0-nsg-ssh",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "www_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkSecurityGroups/hamap-nsg",
            "location": "koreacentral",
            "name": "hamap-nsg",
            "resource_group_name": "04-t1-www-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyMySQL",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "hamap-nsg",
            "resource_group_name": "04-t1-www-rg",
            "subscription_id": "99b79efe-ebd6-468c-b39f-5669acb259e1"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "www_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-web",
            "network_security_group_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/networkSecurityGroups/hamap-nsg",
            "subnet_id": "/subscriptions/99b79efe-ebd6-468c-b39f-5669acb259e1/resourceGroups/04-t1-www-rg/providers/Microsoft.Network/virtualNetworks/vnet0/subnets/subnet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_central.azurerm_subnet.subnets",
            "module.network_central.azurerm_virtual_network.vnet",
            "module.security.azurerm_network_security_group.www_nsg"
          ]
        }
      ]
    }
  ]
}